--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     />
   </head>
   <body>
-    <h1 class="fixed-left-side-hello">Hello,</h1>
+    <h1 class="fixed-left-side-hello">Hello.</h1>
     <div class="fixed-left-side-body">
       <div class="profile">
         <div class="profile-image center-align">
-          <img src="/img/zFON.png" alt="Image portfolio" />
+          <img src="../img/zFON.png" alt="Image portfolio" />
         </div>
         <div class="profile-name center-align">
           <h1 class="user-name">Dmitriy Tkahyk</h1>
@@ -25,10 +25,24 @@
             in Khmelnitsk
           </p>
         </div>
+        <ul class="social-btn">
+          <a class="icons-facebook" href="https://www.facebook.com/zdimaby">
+            <img
+              width="32"
+              src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Facebook_icon_%28black%29.svg"
+            />
+          </a>
+          <a class="icons-instagram" href="https://www.instagram.com/zdimaby/">
+            <img
+              width="32"
+              src="https://upload.wikimedia.org/wikipedia/commons/2/27/CIS-A2K_Instagram_Icon_%28Black%29.svg"
+            />
+          </a>
+        </ul>
       </div>
     </div>
     <div class="right-side-body">
-      <div class="about-me">
+      <div class="aboutme-section">
         <div class="Section-title">
           <h2>About Me</h2>
           <p>
@@ -42,6 +56,51 @@
             involved in programming microcontrollers (stm, atmega), programming
             radio-controlled aircraft, drones, ships.
           </p>
+          <div class="personal-details-right">
+            <h2 class="title">personal details</h2>
+            <table>
+              <tbody>
+                <tr>
+                  <td class="td-w25">Full Name</td>
+                  <td class="td-w10">:</td>
+                  <td class="td-w65">Dmitriy Tkahyk</td>
+                </tr>
+                <tr>
+                  <td class="td-w25">Father's Name</td>
+                  <td class="td-w10">:</td>
+                  <td class="td-w65">Mr. Alexander Tkahyk</td>
+                </tr>
+                <tr>
+                  <td class="td-w25">Address</td>
+                  <td class="td-w10">:</td>
+                  <td class="td-w65">
+                    vul. Gagarin, Yarmolinetsky district, the city of
+                    Khmelnitsky, M.P. Ukraine
+                  </td>
+                </tr>
+                <tr>
+                  <td class="td-w25">Zip Code</td>
+                  <td class="td-w10">:</td>
+                  <td class="td-w65">32140</td>
+                </tr>
+                <tr>
+                  <td class="td-w25">Phone</td>
+                  <td class="td-w10">:</td>
+                  <td class="td-w65">+380986677944</td>
+                </tr>
+                <tr>
+                  <td class="td-w25">Email</td>
+                  <td class="td-w10">:</td>
+                  <td class="td-w65">zdimaby@gmail.com</td>
+                </tr>
+                <tr>
+                  <td class="td-w25">Website</td>
+                  <td class="td-w10">:</td>
+                  <td class="td-w65">https://zdimaby.github.io/myPortfolio/</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
